// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper renders correctly with default direction changed 1`] = `
@media  {
  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-knmidH {
    justify-content: space-between;
  }

  .c-boNUgq {
    position: relative;
    font-family: var(--fonts-body);
    font-weight: 600;
    font-size: var(--fontSizes-md);
    align-items: center;
  }

  .c-boNUgq:not(:last-child)::after {
    content: "";
    position: absolute;
  }

  .c-boNUgq:focus-visible {
    outline: none;
  }

  .c-iXIhNm {
    position: relative;
    padding: var(--space-2);
    justify-content: center;
    align-items: center;
    height: var(--sizes-3);
    width: var(--sizes-3);
    border-radius: 50%;
    border: none;
    background: var(--colors-tonal100);
    z-index: 1;
    flex: none;
  }
}

@media  {
  .c-fkUJsw-jMTgOB-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
    height: var(--sizes-3);
    padding-left: var(--space-4);
    padding-right: var(--space-4);
    gap: var(--space-2);
  }

  .c-fkUJsw-jMTgOB-size-sm .c-dbrbZt {
    height: 16px;
    width: 16px;
  }

  .c-knmidH-ejCoEP-direction-horizontal {
    flex-direction: row;
  }

  .c-boNUgq-fruqQw-direction-horizontal {
    padding-left: var(--space-2);
    padding-right: var(--space-2);
    flex-direction: column;
  }

  .c-boNUgq-fruqQw-direction-horizontal:not(:last-child)::after {
    width: 100%;
    height: 4px;
    left: 50%;
    top: 14px;
  }

  .c-boNUgq-eoIvAE-separator-default:not(:last-child)::after {
    background: var(--colors-tonal100);
  }

  .c-iXIhNm-gjRYFk-status-active {
    background: white;
    color: var(--colors-primaryMid);
    border: 2px solid;
    border-color: currentColor;
  }

  .c-iXIhNm-fkZUVj-status-default {
    background: var(--colors-tonal100);
    color: var(--colors-tonal300);
  }

  .c-iXIhNm-lkRQpS-status-completed {
    background: var(--colors-primary);
    color: white;
  }

  .c-boNUgq-dGwPMl-separator-active:not(:last-child)::after {
    background: var(--colors-primary);
  }

  .c-iXIhNm-bHjIVm-status-reviewed {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-iXIhNm-kDTefL-status-viewed {
    background: white;
    border: 2px solid var(--colors-tonal200);
    color: var(--colors-tonal600);
  }

  .c-boNUgq-fpjjDi-separator-success:not(:last-child)::after {
    background: var(--colors-success);
  }

  .c-iXIhNm-fpBJZl-status-success {
    background: var(--colors-success);
    color: white;
  }

  .c-knmidH-iTKOFX-direction-vertical {
    flex-direction: column;
  }

  .c-boNUgq-bQZyjU-direction-vertical {
    padding-top: var(--space-3);
    padding-bottom: var(--space-3);
    flex-direction: row;
  }

  .c-boNUgq-bQZyjU-direction-vertical:not(:last-child)::after {
    height: 100%;
    width: 4px;
    left: 14px;
    top: 50%;
  }
}

@media  {
  .c-fkUJsw-fSssiS-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fkUJsw-fSssiS-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):hover,
  .c-fkUJsw-fSssiS-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }

  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }

  .c-boNUgq-jCkdlW-cv:hover :first-child {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal600);
  }

  .c-boNUgq-jCkdlW-cv:hover :last-child {
    color: var(--colors-tonal600);
  }

  .c-boNUgq-jCkdlW-cv:focus-visible :first-child {
    outline: 2px solid var(--colors-primary);
    outline-offset: 2px;
  }

  .c-boNUgq-dKQwO-cv:hover :first-child {
    background: var(--colors-primaryMid);
    color: white !important;
  }

  .c-boNUgq-dKQwO-cv:hover :last-child {
    color: var(--colors-primaryMid);
  }

  .c-boNUgq-dKQwO-cv:focus-visible :first-child {
    outline: 2px solid var(--colors-primary);
    outline-offset: 2px;
  }

  .c-boNUgq-iIblYT-cv:focus-visible :first-child {
    outline: 2px solid var(--colors-primary) !important;
    outline-offset: 2px !important;
  }

  .c-boNUgq-fCshQK-cv:hover :first-child {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal600);
  }

  .c-boNUgq-fCshQK-cv:hover :last-child {
    color: var(--colors-tonal600);
  }

  .c-boNUgq-fCshQK-cv:focus-visible :first-child {
    outline: 2px solid var(--colors-primary) !important;
    outline-offset: 2px !important;
  }
}

@media  {
  .c-PJLV-ifGHEql-css {
    width: 100%;
  }

  .c-dhzjXW-ibJjasZ-css {
    width: calc(100% / 3);
  }

  .c-dhzjXW-idGcKFW-css {
    cursor: auto;
  }

  .c-fkUJsw-icKSZB-css {
    margin-left: auto;
  }

  .c-dhzjXW-igsmDXe-css {
    cursor: pointer;
  }

  .c-dhzjXW-ieTCIBM-css {
    height: calc(100% / 3);
  }
}

<div>
  <div
    aria-label="progress"
    class="c-PJLV c-PJLV-ifGHEql-css"
  >
    <button
      class="c-fkUJsw c-fkUJsw-jMTgOB-size-sm c-fkUJsw-fSssiS-cv"
      disabled=""
      type="button"
    >
      Back
    </button>
    <div
      class="c-dhzjXW c-knmidH c-knmidH-iTKOFX-direction-vertical"
    >
      <div
        class="c-dhzjXW c-boNUgq c-boNUgq-bQZyjU-direction-vertical c-boNUgq-eoIvAE-separator-default c-boNUgq-jCkdlW-cv c-dhzjXW-ieTCIBM-css"
        tabindex="0"
      >
        <button
          aria-current="step"
          aria-label="step 1"
          class="c-dhzjXW c-iXIhNm c-iXIhNm-gjRYFk-status-active c-dhzjXW-igsmDXe-css"
        >
          1
        </button>
      </div>
      <div
        class="c-dhzjXW c-boNUgq c-boNUgq-bQZyjU-direction-vertical c-boNUgq-eoIvAE-separator-default c-dhzjXW-ieTCIBM-css"
        tabindex="0"
      >
        <button
          aria-label="step 2"
          class="c-dhzjXW c-iXIhNm c-iXIhNm-fkZUVj-status-default c-dhzjXW-idGcKFW-css"
        >
          2
        </button>
      </div>
      <div
        class="c-dhzjXW c-boNUgq c-boNUgq-bQZyjU-direction-vertical c-boNUgq-eoIvAE-separator-default c-dhzjXW-ieTCIBM-css"
        tabindex="0"
      >
        <button
          aria-label="step 3"
          class="c-dhzjXW c-iXIhNm c-iXIhNm-fkZUVj-status-default c-dhzjXW-idGcKFW-css"
        >
          3
        </button>
      </div>
    </div>
    <button
      class="c-fkUJsw c-fkUJsw-jMTgOB-size-sm c-fkUJsw-gsycxF-cv c-fkUJsw-icKSZB-css"
      type="button"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`Stepper renders success icon for bullets when step is completed 1`] = `
@media  {
  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-knmidH {
    justify-content: space-between;
  }

  .c-boNUgq {
    position: relative;
    font-family: var(--fonts-body);
    font-weight: 600;
    font-size: var(--fontSizes-md);
    align-items: center;
  }

  .c-boNUgq:not(:last-child)::after {
    content: "";
    position: absolute;
  }

  .c-boNUgq:focus-visible {
    outline: none;
  }

  .c-iXIhNm {
    position: relative;
    padding: var(--space-2);
    justify-content: center;
    align-items: center;
    height: var(--sizes-3);
    width: var(--sizes-3);
    border-radius: 50%;
    border: none;
    background: var(--colors-tonal100);
    z-index: 1;
    flex: none;
  }

  .c-ecBjWS {
    font-weight: 600;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }
}

@media  {
  .c-fkUJsw-jMTgOB-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
    height: var(--sizes-3);
    padding-left: var(--space-4);
    padding-right: var(--space-4);
    gap: var(--space-2);
  }

  .c-fkUJsw-jMTgOB-size-sm .c-dbrbZt {
    height: 16px;
    width: 16px;
  }

  .c-knmidH-ejCoEP-direction-horizontal {
    flex-direction: row;
  }

  .c-boNUgq-fruqQw-direction-horizontal {
    padding-left: var(--space-2);
    padding-right: var(--space-2);
    flex-direction: column;
  }

  .c-boNUgq-fruqQw-direction-horizontal:not(:last-child)::after {
    width: 100%;
    height: 4px;
    left: 50%;
    top: 14px;
  }

  .c-boNUgq-eoIvAE-separator-default:not(:last-child)::after {
    background: var(--colors-tonal100);
  }

  .c-iXIhNm-gjRYFk-status-active {
    background: white;
    color: var(--colors-primaryMid);
    border: 2px solid;
    border-color: currentColor;
  }

  .c-iXIhNm-fkZUVj-status-default {
    background: var(--colors-tonal100);
    color: var(--colors-tonal300);
  }

  .c-iXIhNm-lkRQpS-status-completed {
    background: var(--colors-primary);
    color: white;
  }

  .c-boNUgq-dGwPMl-separator-active:not(:last-child)::after {
    background: var(--colors-primary);
  }

  .c-iXIhNm-bHjIVm-status-reviewed {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-iXIhNm-kDTefL-status-viewed {
    background: white;
    border: 2px solid var(--colors-tonal200);
    color: var(--colors-tonal600);
  }

  .c-boNUgq-fpjjDi-separator-success:not(:last-child)::after {
    background: var(--colors-success);
  }

  .c-iXIhNm-fpBJZl-status-success {
    background: var(--colors-success);
    color: white;
  }

  .c-knmidH-iTKOFX-direction-vertical {
    flex-direction: column;
  }

  .c-boNUgq-bQZyjU-direction-vertical {
    padding-top: var(--space-3);
    padding-bottom: var(--space-3);
    flex-direction: row;
  }

  .c-boNUgq-bQZyjU-direction-vertical:not(:last-child)::after {
    height: 100%;
    width: 4px;
    left: 14px;
    top: 50%;
  }

  .c-ecBjWS-iwHyEI-direction-horizontal {
    margin-top: var(--space-3);
    text-align: center;
  }

  .c-ecBjWS-cDiHrO-status-active {
    color: var(--colors-primaryMid);
  }

  .c-ecBjWS-dlhNdU-status-default {
    color: var(--colors-tonal300);
    font-weight: 400;
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-ecBjWS-byQUqd-status-success {
    color: var(--colors-success);
  }
}

@media  {
  .c-fkUJsw-fSssiS-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fkUJsw-fSssiS-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):hover,
  .c-fkUJsw-fSssiS-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }

  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }

  .c-boNUgq-jCkdlW-cv:hover :first-child {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal600);
  }

  .c-boNUgq-jCkdlW-cv:hover :last-child {
    color: var(--colors-tonal600);
  }

  .c-boNUgq-jCkdlW-cv:focus-visible :first-child {
    outline: 2px solid var(--colors-primary);
    outline-offset: 2px;
  }

  .c-boNUgq-dKQwO-cv:hover :first-child {
    background: var(--colors-primaryMid);
    color: white !important;
  }

  .c-boNUgq-dKQwO-cv:hover :last-child {
    color: var(--colors-primaryMid);
  }

  .c-boNUgq-dKQwO-cv:focus-visible :first-child {
    outline: 2px solid var(--colors-primary);
    outline-offset: 2px;
  }

  .c-boNUgq-iIblYT-cv:focus-visible :first-child {
    outline: 2px solid var(--colors-primary) !important;
    outline-offset: 2px !important;
  }

  .c-boNUgq-fCshQK-cv:hover :first-child {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal600);
  }

  .c-boNUgq-fCshQK-cv:hover :last-child {
    color: var(--colors-tonal600);
  }

  .c-boNUgq-fCshQK-cv:focus-visible :first-child {
    outline: 2px solid var(--colors-primary) !important;
    outline-offset: 2px !important;
  }
}

@media  {
  .c-PJLV-ifGHEql-css {
    width: 100%;
  }

  .c-dhzjXW-ibJjasZ-css {
    width: calc(100% / 3);
  }

  .c-dhzjXW-idGcKFW-css {
    cursor: auto;
  }

  .c-fkUJsw-icKSZB-css {
    margin-left: auto;
  }

  .c-dhzjXW-igsmDXe-css {
    cursor: pointer;
  }

  .c-dhzjXW-ieTCIBM-css {
    height: calc(100% / 3);
  }

  .c-dhzjXW-ikOanEY-css {
    width: calc(100% / 2);
  }
}

<div>
  <div
    aria-label="progress"
    class="c-PJLV c-PJLV-ifGHEql-css"
  >
    <button
      class="c-fkUJsw c-fkUJsw-jMTgOB-size-sm c-fkUJsw-fSssiS-cv"
      disabled=""
      type="button"
    >
      Back
    </button>
    <div
      class="c-dhzjXW c-knmidH c-knmidH-ejCoEP-direction-horizontal"
    >
      <div
        class="c-dhzjXW c-boNUgq c-boNUgq-fruqQw-direction-horizontal c-boNUgq-fpjjDi-separator-success c-dhzjXW-ikOanEY-css"
        tabindex="0"
      >
        <div
          aria-current="step"
          aria-label=""
          aria-labelledby="step-0"
          class="c-dhzjXW c-iXIhNm c-iXIhNm-fpBJZl-status-success c-dhzjXW-idGcKFW-css"
        >
          <svg
            aria-hidden="true"
            class="c-dbrbZt c-dbrbZt-dMrjnF-size-md"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="4 13 9 18 20 7"
            />
          </svg>
        </div>
        <span
          class="c-ecBjWS c-ecBjWS-iwHyEI-direction-horizontal c-ecBjWS-byQUqd-status-success"
          id="step-0"
        >
          Step 1
        </span>
      </div>
      <div
        class="c-dhzjXW c-boNUgq c-boNUgq-fruqQw-direction-horizontal c-boNUgq-eoIvAE-separator-default c-dhzjXW-ikOanEY-css"
        tabindex="0"
      >
        <div
          aria-label=""
          aria-labelledby="step-1"
          class="c-dhzjXW c-iXIhNm c-iXIhNm-gjRYFk-status-active c-dhzjXW-idGcKFW-css"
        >
          2
        </div>
        <span
          class="c-ecBjWS c-ecBjWS-iwHyEI-direction-horizontal c-ecBjWS-cDiHrO-status-active"
          id="step-1"
        >
          Step 2
        </span>
      </div>
    </div>
    <button
      class="c-fkUJsw c-fkUJsw-jMTgOB-size-sm c-fkUJsw-gsycxF-cv c-fkUJsw-icKSZB-css"
      type="button"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`Stepper renders the correct number of bullets 1`] = `
@media  {
  .c-fkUJsw {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-knmidH {
    justify-content: space-between;
  }

  .c-boNUgq {
    position: relative;
    font-family: var(--fonts-body);
    font-weight: 600;
    font-size: var(--fontSizes-md);
    align-items: center;
  }

  .c-boNUgq:not(:last-child)::after {
    content: "";
    position: absolute;
  }

  .c-boNUgq:focus-visible {
    outline: none;
  }

  .c-iXIhNm {
    position: relative;
    padding: var(--space-2);
    justify-content: center;
    align-items: center;
    height: var(--sizes-3);
    width: var(--sizes-3);
    border-radius: 50%;
    border: none;
    background: var(--colors-tonal100);
    z-index: 1;
    flex: none;
  }
}

@media  {
  .c-fkUJsw-jMTgOB-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
    height: var(--sizes-3);
    padding-left: var(--space-4);
    padding-right: var(--space-4);
    gap: var(--space-2);
  }

  .c-fkUJsw-jMTgOB-size-sm .c-dbrbZt {
    height: 16px;
    width: 16px;
  }

  .c-knmidH-ejCoEP-direction-horizontal {
    flex-direction: row;
  }

  .c-boNUgq-fruqQw-direction-horizontal {
    padding-left: var(--space-2);
    padding-right: var(--space-2);
    flex-direction: column;
  }

  .c-boNUgq-fruqQw-direction-horizontal:not(:last-child)::after {
    width: 100%;
    height: 4px;
    left: 50%;
    top: 14px;
  }

  .c-boNUgq-eoIvAE-separator-default:not(:last-child)::after {
    background: var(--colors-tonal100);
  }

  .c-iXIhNm-gjRYFk-status-active {
    background: white;
    color: var(--colors-primaryMid);
    border: 2px solid;
    border-color: currentColor;
  }

  .c-iXIhNm-fkZUVj-status-default {
    background: var(--colors-tonal100);
    color: var(--colors-tonal300);
  }
}

@media  {
  .c-fkUJsw-fSssiS-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-fkUJsw-fSssiS-cv[disabled] {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):hover,
  .c-fkUJsw-fSssiS-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-fkUJsw-fSssiS-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }

  .c-fkUJsw-gsycxF-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv[disabled] {
    background: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):hover,
  .c-fkUJsw-gsycxF-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-fkUJsw-gsycxF-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }

  .c-boNUgq-jCkdlW-cv:hover :first-child {
    border-color: var(--colors-tonal400);
    color: var(--colors-tonal600);
  }

  .c-boNUgq-jCkdlW-cv:hover :last-child {
    color: var(--colors-tonal600);
  }

  .c-boNUgq-jCkdlW-cv:focus-visible :first-child {
    outline: 2px solid var(--colors-primary);
    outline-offset: 2px;
  }
}

@media  {
  .c-PJLV-ifGHEql-css {
    width: 100%;
  }

  .c-dhzjXW-ibJjasZ-css {
    width: calc(100% / 3);
  }

  .c-dhzjXW-idGcKFW-css {
    cursor: auto;
  }

  .c-fkUJsw-icKSZB-css {
    margin-left: auto;
  }

  .c-dhzjXW-igsmDXe-css {
    cursor: pointer;
  }
}

<div>
  <div
    aria-label="progress"
    class="c-PJLV c-PJLV-ifGHEql-css"
  >
    <button
      class="c-fkUJsw c-fkUJsw-jMTgOB-size-sm c-fkUJsw-fSssiS-cv"
      disabled=""
      type="button"
    >
      Back
    </button>
    <div
      class="c-dhzjXW c-knmidH c-knmidH-ejCoEP-direction-horizontal"
    >
      <div
        class="c-dhzjXW c-boNUgq c-boNUgq-fruqQw-direction-horizontal c-boNUgq-eoIvAE-separator-default c-boNUgq-jCkdlW-cv c-dhzjXW-ibJjasZ-css"
        tabindex="0"
      >
        <button
          aria-current="step"
          aria-label="step 1"
          class="c-dhzjXW c-iXIhNm c-iXIhNm-gjRYFk-status-active c-dhzjXW-igsmDXe-css"
        >
          1
        </button>
      </div>
      <div
        class="c-dhzjXW c-boNUgq c-boNUgq-fruqQw-direction-horizontal c-boNUgq-eoIvAE-separator-default c-dhzjXW-ibJjasZ-css"
        tabindex="0"
      >
        <button
          aria-label="step 2"
          class="c-dhzjXW c-iXIhNm c-iXIhNm-fkZUVj-status-default c-dhzjXW-idGcKFW-css"
        >
          2
        </button>
      </div>
      <div
        class="c-dhzjXW c-boNUgq c-boNUgq-fruqQw-direction-horizontal c-boNUgq-eoIvAE-separator-default c-dhzjXW-ibJjasZ-css"
        tabindex="0"
      >
        <button
          aria-label="step 3"
          class="c-dhzjXW c-iXIhNm c-iXIhNm-fkZUVj-status-default c-dhzjXW-idGcKFW-css"
        >
          3
        </button>
      </div>
    </div>
    <button
      class="c-fkUJsw c-fkUJsw-jMTgOB-size-sm c-fkUJsw-gsycxF-cv c-fkUJsw-icKSZB-css"
      type="button"
    >
      Next
    </button>
  </div>
</div>
`;
